[package]
name = "ublox-gps"
version = "0.0.1"
edition = "2021"

[dependencies]
bitfield-struct = "0.9"
chrono = { version = "0.4", features = ["default", "serde"]}
dimensioned = { version = "0.8", features = ["serde", "std"] }
lazy_static = "1.5"
nmea-parser = "0.11"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serialport = "4.5"
thiserror = "1.0"
