[package]
name = "ublox-recorder"
version = "0.0.1"
edition = "2021"

[dependencies]
argh = "0.1"
chrono = "0.4"
crossterm = "0.28"
ctrlc = "3.4"
directories = "5.0"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
serialport = "4.5"
ublox-gps-tec = { path = "../ublox-gps" }
tar = "0.4"
lazy_static = "1.5.0"
log = "0.4.25"

[dev-dependencies]
tempfile = "3.2"

